# incerto

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  publish.yml
examples/: README.md  air_traffic_3d.rs  coin_toss.rs  ecosystem_multi_grid.rs  forest_fire.rs  pandemic.rs  pandemic_spatial.rs  traders.rs
src/: error.rs  lib.rs  monte_carlo.rs  monte_carlo_builder.rs  prelude.rs  simulation.rs  simulation_builder.rs  spawner.rs  trait_blankets.rs  traits.rs
src/plugins/: mod.rs  spatial_grid.rs  step_counter.rs  step_number.rs  time_series.rs
src/types/: mod.rs  times_series.rs
src/util/: aggregate.rs  mod.rs
tests/: mod.rs  test_aggregates.rs  test_builder.rs  test_counter.rs  test_monte_carlo.rs  test_spatial_grid.rs
