[package]
name = "incerto"
version = "0.5.0"
edition = "2024"
description = "Monte carlo simulations."
readme = "README.md"
license = "MIT"
repository = "https://github.com/haath/incerto"
keywords = ["monte", "carlo", "simulation", "rng", "experiment"]
categories = [
    "finance",
    "mathematics",
    "science",
    "simulation",
    "visualization",
]


[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "multi_threaded",
] }
ordered-float = { version = "5.0" }


[dev-dependencies]
rand = "0.9"
rand_distr = "0.5"
plotters = "0.3"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1


# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3


# Set project lint levels
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap-used = "warn"
expect-used = "warn"
module-name-repetitions = "allow"
needless-pass-by-value = "allow"
multiple-crate-versions = "allow"
